[project]
name = "ifc-doc-process"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9,<=3.10"
readme = "README.md"
dependencies = [
    "docx (>=0.2.4,<0.3.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "openai (>=1.81.0,<2.0.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "google-api-python-client (>=2.170.0,<3.0.0)",
    "google-auth (>=2.40.2,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
]

[dependency-groups]
dev = [
    "coverage>=7.8.1,<8",
    "pytest>=8.3.5,<9",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


